# vessel-notifications

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
assets/: logo-combined.html  logo-concepts.html
deploy/: ais-notify.service  rtl-ais.service
process/: 01-initial-plan.md  02-plan-output.md  03-code-review.md
src/ais_notify/: __init__.py  config.py  decode.py  dedup.py  direction.py  geofence.py  handler.py  main.py  models.py
src/ais_notify/db/: repository.py  supabase_client.py
src/ais_notify/enrich/: __init__.py  ais_static.py  base.py  mmsi.py  photo.py  shiptype.py
src/ais_notify/notify/: __init__.py  base.py  bot_commands.py  formatter.py  telegram.py
src/ais_notify/sources/: __init__.py  base.py  file_source.py  serial_source.py  tcp_source.py  udp_source.py
src/ais_notify/stats/: __init__.py  queries.py  scheduler.py
supabase/: schema.sql
tests/: sample.nmea  test_decode.py  test_dedup.py  test_enrich.py  test_formatter.py  test_stats.py
